--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,20 @@
             <version>1.18.36</version>
         </dependency>
 
+        <!-- Swagger config -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
 
     </dependencies>
 
